# mlflow-dock

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-build.yml
src/mlflow_dock/: main.py
src/scripts/: create_webhook.py
